--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Website</title>
+    <title>Avery Bowman, LLC</title>
   </head>
 
   <body>
@@ -16,9 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/AveryBowmanLLC/website">View on GitHub</a>
 
-          <h1 id="project_title">Website</h1>
+          <h1 id="project_title">Avery Bowman, LLC</h1>
           <h2 id="project_tagline">Essential training and certifications</h2>
 
             <section id="downloads">
